--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\Accionista\**" />
+    <Compile Remove="Controllers\Referente\**" />
+    <Content Remove="Controllers\Accionista\**" />
+    <Content Remove="Controllers\Referente\**" />
+    <EmbeddedResource Remove="Controllers\Accionista\**" />
+    <EmbeddedResource Remove="Controllers\Referente\**" />
+    <None Remove="Controllers\Accionista\**" />
+    <None Remove="Controllers\Referente\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
@@ -17,11 +28,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGenerators.Mvc" Version="7.0.8" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\Accionista\" />
-    <Folder Include="Controllers\Referente\" />
   </ItemGroup>
 
 </Project>
