--- a/act_Application/Data/Config/smtpconfig.json
+++ b/act_Application/Data/Config/smtpconfig.json
@@ -2,5 +2,5 @@
   "Server": "smtp.gmail.com",
   "Port": 587,
   "Username": "actapp.notificaciones@gmail.com",
-  "Password": "dxwedduahazhkgxs"
+  "Password": "qbhphmiltqjmkdjv"
 }
