Vista Aportar Parte 2 (COMPLETADA)

--- a/act_Application/Properties/launchSettings.json
+++ b/act_Application/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5072"
+      "applicationUrl": "http://localhost:5024"
     },
     "https": {
       "commandName": "Project",
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7066;http://localhost:5072"
+      "applicationUrl": "https://localhost:7048;http://localhost:5024"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,14 +24,21 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:59071",
-      "sslPort": 44372
+      "applicationUrl": "http://localhost:35712",
+      "sslPort": 44311
     }
   }
 }
