--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\Administrador\Sistema\**" />
+    <Content Remove="Controllers\Administrador\Sistema\**" />
+    <EmbeddedResource Remove="Controllers\Administrador\Sistema\**" />
+    <None Remove="Controllers\Administrador\Sistema\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
@@ -19,10 +26,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGenerators.Mvc" Version="7.0.9" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\Administrador\Sistema\" />
   </ItemGroup>
 
 </Project>
