Creacion de Cuotas (Notificaciones Controller)

--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\General\NotificacionesController.cs~RF26db15.TMP" />
     <None Remove="Data\Config\config.json~RF76bdf3.TMP" />
   </ItemGroup>
 
