--- a/act_Application/Data/Config/config.json
+++ b/act_Application/Data/Config/config.json
@@ -17,6 +17,7 @@
     "SelectNotifiUser": "SELECT * FROM act_Notificaciones WHERE Destino = @Id",
     "SelectExistNotificacion": "SELECT COUNT(*) AS existe FROM act_Notificaciones WHERE Id = @Id",
     "SelectParticipantes": "SELECT * FROM act_Participantes WHERE Id = @Id",
-    "SelectParticipantesExist": "SELECT COUNT(*) AS existe FROM act_Participantes WHERE Id = @Id"
+    "SelectParticipantesExist": "SELECT COUNT(*) AS existe FROM act_Participantes WHERE Id = @Id",
+    "SelectDestino": "SELECT Id, NumeroCuenta, NombreBanco FROM act_CuentaDestino"
   }
 }
