--- a/act_Application/Data/Config/config.json
+++ b/act_Application/Data/Config/config.json
@@ -18,6 +18,8 @@
     "SelectExistNotificacion": "SELECT COUNT(*) AS existe FROM act_Notificaciones WHERE Id = @Id",
     "SelectParticipantes": "SELECT * FROM act_Participantes WHERE Id = @Id",
     "SelectParticipantesExist": "SELECT COUNT(*) AS existe FROM act_Participantes WHERE Id = @Id",
-    "SelectDestino": "SELECT Id, NumeroCuenta, NombreBanco FROM act_CuentaDestino"
+    "SelectDestino": "SELECT Id, NumeroCuenta, NombreBanco FROM act_CuentaDestino",
+    "SelectExistsEventos": "SELECT COUNT(*) FROM act_Participantes WHERE Estado ='CONCURSO'",
+    "SelectDatosEventoParticipante": "SELECT * FROM act_Participantes WHERE Estado ='CONCURSO'"
   }
 }
