Nueva Estructura de Datos tipo Class Repository

--- a/act_Application/Data/Config/config.json
+++ b/act_Application/Data/Config/config.json
@@ -1,38 +1,15 @@
 ﻿{
   "Queries": {
-    "SelectUser": "SELECT * FROM act_User WHERE Correo = @Correo AND Contrasena = @Contrasena",
-    "SelectUserRole": "SELECT IdRol FROM act_RolUser WHERE IdUser = @IdUser",
+    "SelecUsuario": "SELECT u.Id, u.Cedula, u.Correo, u.NombreYApellido, u.Celular, u.TipoUser, r.IdRol FROM act_User u LEFT JOIN act_RolUser r ON u.Id = r.IdUser WHERE u.Correo = @Correo AND u.Contrasena = @Contrasena",
     "SelectRol": "SELECT * FROM act_Rol WHERE Id = @IdRol",
     "SelectEmail": "SELECT Correo FROM act_User Where Id =1",
     "SelectDestino": "SELECT Id, NumeroCuenta, NombreBanco FROM act_CuentaDestino",
-
-    "Cont_Y_Cons": "Queries de Conteo de Datos y Consulta de Datos",
-
     "SelectEvents": "SELECT (SELECT COUNT(*) FROM act_Eventos WHERE Estado = 'CONCURSO') AS TotalEventos, x.Id, x.IdTransaccion, x.FechaInicio, x.FechaFinalizacion, x.FechaGeneracion, x.ParticipantesId, x.ParticipantesNombre, x.Estado, u.NombreYApellido AS NombreUsuario FROM act_Eventos x INNER JOIN act_User u ON x.IdUser = u.Id WHERE x.Estado = 'CONCURSO'",
-    "SelectAportaciones": "SELECT (SELECT COUNT(*) FROM act_Aportaciones) AS TotalAportaciones, a.Id, a.Razon, a.Valor, a.IdUser, a.FechaAportacion, a.Aprobacion, u.NombreYapellido AS NombreUsuario FROM act_Aportaciones a INNER JOIN act_User u ON a.IdUser = u.Id",
+    "SelectAportaciones": "SELECT (SELECT COUNT(*) FROM act_Aportaciones) AS TotalAportaciones, a.Id, a.Razon, a.Valor, a.IdUser, a.FechaAportacion, a.Aprobacion, a.CapturaPantalla, u.NombreYapellido AS NombreUsuario FROM act_Aportaciones a INNER JOIN act_User u ON a.IdUser = u.Id",
     "SelectMultas": "SELECT (SELECT COUNT(*) FROM act_Multas) AS TotalMultas, a.Id, a.IdUser, a.Valor, a.FechaMulta,  u.NombreYApellido AS NombreUsuario FROM act_Multas a INNER JOIN act_User u ON a.IdUser = u.Id",
     "SelectAdminNotificacion": "SELECT (SELECT COUNT(*) FROM act_Notificaciones WHERE Destino = 'ADMINISTRADOR') AS TotalNotificaciones, a.* FROM act_Notificaciones a WHERE a.Destino ='ADMINISTRADOR'",
     "SelectUserNotificacion": "SELECT (SELECT COUNT(*) FROM act_Notificaciones WHERE Destino = @Id) AS TotalNotificaciones, a.* FROM act_Notificaciones a WHERE Destino = @Id",
-
-    "En Evaluacion": "Estos queries estan en evaluacion",
     "SelecInfoTransacciones": "SELECT * FROM act_Transacciones WHERE Id = @IdTransacciones",
-    "SelectExistTransancion": "SELECT COUNT(*) AS existe FROM act_Transacciones WHERE Id = @Id",
-    "SelectNotificiacionIdTrans": "SELECT IdUser FROM act_Notificaciones Where IdTransacciones = @Id",
-    "SelectExistNotificacion": "SELECT COUNT(*) AS existe FROM act_Notificaciones WHERE Id = @Id",
-
-    "En Restructuracion": "Estos queries estan en fase de modificion de antiguos metodos",
-    "SelectParticipantes": "SELECT * FROM act_Eventos WHERE Id = @Id",
-
-    "SelectExistenciaAportaciones": "SELECT COUNT(*) FROM act_Aportaciones",
-    "SelectAportantes": "SELECT a.*, u.NombreYApellido AS NombreUsuario FROM act_Aportaciones a INNER JOIN act_User u ON a.IdUser = u.Id",
-
-    "SelectExistenciaMultas": "SELECT COUNT(*) FROM act_Multas",
-    "SelectMultados": "SELECT a.*, u.NombreYApellido AS NombreUsuario FROM act_Multas a INNER JOIN act_User u ON a.IdUser = u.Id",
-
-    "SelectExistenciaNotifiAdmin": "SELECT COUNT(*) AS TotalRegistros FROM act_Notificaciones WHERE Destino = 'ADMINISTRADOR'",
-    "SelectNotifiAdmin": "SELECT * FROM act_Notificaciones WHERE Destino = 'ADMINISTRADOR'",
-
-    "SelectExistenciaNotifiUsuario": "SELECT COUNT(*) AS TotalRegistros FROM act_Notificaciones WHERE Destino = @Id",
-    "SelectNotifiUser": "SELECT * FROM act_Notificaciones WHERE Destino = @Id"
+    "SelectEventoId": "SELECT * FROM act_Eventos WHERE Id = @Id"
   }
 }
