--- a/act_Application/Dockerfile
+++ b/act_Application/Dockerfile
@@ -1,9 +1,7 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
+# Utiliza la imagen oficial de .NET 7 como punto de partida
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
@@ -14,8 +12,9 @@ WORKDIR "/src/act_Application"
 RUN dotnet build "act_Application.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "act_Application.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "act_Application.csproj" -c Release -o /app/publish
 
+# Crea la imagen final del contenedor
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
