--- a/act_Application/Dockerfile
+++ b/act_Application/Dockerfile
@@ -1,18 +1,24 @@
 # Utiliza la imagen oficial de .NET 7 como punto de partida
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-WORKDIR /act_Application
-
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS base
+WORKDIR /app
 EXPOSE 80
 EXPOSE 5024
 
-COPY ./*.csproj ./
-RUN dotnet restore 
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+WORKDIR /act_Application
+
+COPY ["act_Application.csproj", ""]
+
+RUN dotnet restore "./act_Application.csproj"
 
 COPY . .
-RUN dotnet publish -c Release -o out
+WORKDIR "/act_Application/."
+RUN dotnet build "act_Application.csproj" -c Release -o /app/build
 
-#Imagen
-FROM mcr.microsoft.com/dotnet/sdk:7.0 
-WORKDIR /act_Application
-COPY --from=build /act_Application/out .   
+FROM build AS publish
+RUN dotnet publish "act_Application.csproj" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "act_Application.dll"]
