--- a/act_Application/Properties/launchSettings.json
+++ b/act_Application/Properties/launchSettings.json
@@ -31,6 +31,16 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:7076",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:7076;http://localhost:5008"
+      },
+      "distributionName": ""
     }
   },
   "iisSettings": {
