--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,17 @@
 version: '3'
 services:
-  act_application:
+  app_application:
+    container_name: app_net7
     build:
       context: ./act_Application
       dockerfile: Dockerfile
     ports:
       - "80:80"
+    depends_on:
+      - bd_application
   bd_application:
     image: mysql:latest
+    container_name: bd_act_mysql
     environment:
       MYSQL_ROOT_PASSWORD: CSGxtrim.2023mmxsun5ZXL
       MYSQL_DATABASE: desarrollo
@@ -15,7 +19,5 @@ services:
       MYSQL_PASSWORD: cgarcia
     volumes:
       - ./sql:/docker-entrypoint-initdb.d
-      - ./my.cnf:/etc/mysql/my.cnf # Monta el archivo my.cnf en el contenedor
     ports:
       - "3306:3306"
-
