--- a/act_Application/Dockerfile
+++ b/act_Application/Dockerfile
@@ -1,22 +1,18 @@
-# Utiliza la imagen oficial de .NET 7 como punto de partida
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 5024
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /act_Application
-
-COPY ["act_Application.csproj", ""]
-
+COPY ["act_Application/act_Application.csproj", ""]
 RUN dotnet restore "./act_Application.csproj"
-
 COPY . .
 WORKDIR "/act_Application/."
-RUN dotnet build "act_Application.csproj" -c Release -o /app/build
+RUN dotnet build "act_Application/act_Application.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "act_Application.csproj" -c Release -o /app/publish
+RUN dotnet publish "act_Application/act_Application.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
