--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>b1183abe-33ca-4b49-bcf8-d6e51f4fb7e4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -16,6 +16,14 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="MySql.Data" Version="8.2.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logic\ComplementosLogicos\" />
+    <Folder Include="Views\Administrador\" />
+    <Folder Include="wwwroot\css\Administrador\" />
+    <Folder Include="wwwroot\js\Administrador\" />
   </ItemGroup>
 
 </Project>
