Objetivo 1 - Login 1. Vista de Login Completada 2. Vista de Registro Completado 3. Metodo Controlador de Registro Completo pero a falta de Servicio de Notificacion SMTP

--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Logic\ComplementosLogicos\" />
+    <Folder Include="Services\" />
     <Folder Include="Views\Administrador\" />
     <Folder Include="wwwroot\css\Administrador\" />
     <Folder Include="wwwroot\js\Administrador\" />
