--- a/act_Application/Data/Config/config.json
+++ b/act_Application/Data/Config/config.json
@@ -14,7 +14,7 @@
     "SelectPrestamosUser": "SELECT (SELECT COUNT(*) FROM act_Prestamos WHERE IdUser = @IdUser) AS TotalPrestamos, (SELECT COUNT(*) FROM act_Prestamos WHERE IdUser = @IdUser AND Estado = 'APROBADO') AS TotalAprobado, (SELECT COUNT(*) FROM act_Prestamos WHERE IdUser = @IdUser AND Estado IN ('DENEGADO', 'RECHAZADO')) AS TotalRechazado, (SELECT COUNT(*) FROM act_Prestamos WHERE IdUser = @IdUser AND Estado  IN ('PENDIENTE REFERENTE', 'PENDIENTE ADMIN')) AS TotalPendiente, (SELECT COUNT(*) FROM act_Prestamos WHERE IdUser = @IdUser AND TipoCuota ='PagoUnico') AS TotalPagoUnico, (SELECT COUNT(*) FROM act_Prestamos WHERE IdUser = @IdUser AND TipoCuota = 'CUOTA') AS TotalCuota, a.* FROM act_Prestamos a WHERE IdUser = @IdUser",
     "SelectEventosUser": "SELECT (SELECT COUNT(*) FROM act_Eventos WHERE Id = @Id) AS TotalEventos, a.* FROM act_Eventos a WHERE Id = @Id",
     "SelectCoutasUser": "SELECT *.a FROM act_Cuotas a WHERE IdUser = @IdUser AND Estado = 'PENDIENTE'",
-    "SelectIdCoutas": "SELECT *.a FROM act_Cuotas a WHERE IdUser = @Id",
+    "SelectIdCoutas": "SELECT *.a FROM act_Cuotas a WHERE Id = @Id",
     "SelectAportacionesUser": "SELECT (SELECT COUNT(*) FROM  act_Aportaciones WHERE IdUser = @IdUser) AS TotalAportaciones, (SELECT COUNT(*) FROM  act_Aportaciones WHERE Aprobacion='APROBADO' AND IdUser = @IdUser) AS TotalAprobados, (SELECT COUNT(*) FROM  act_Aportaciones WHERE Aprobacion='EN ESPERA' AND IdUser = @IdUser) AS TotalEspera, a.* FROM act_Aportaciones a WHERE a.IdUser = @IdUser",
     "SelectMultasUser": "SELECT (SELECT COUNT(*) FROM act_Multas WHERE IdUser = @IdUser) AS TotalMultas, (SELECT COUNT(*) FROM act_Multas WHERE Aprobacion='CANCELADO' AND IdUser = @IdUser) AS TotalCancelados, a.* FROM act_Multas a WHERE a.IdUser=@IdUser"
   },
