--- a/act_Application/Data/Config/config.json
+++ b/act_Application/Data/Config/config.json
@@ -20,7 +20,8 @@
   },
   "Assistant": {
     "SelectLastIdAporUser": "SELECT IdApor FROM act_Aportaciones WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1",
-    "SelectLastIdCoutaUser": "SELECT Id FROM act_Cuotas WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1 ",
-    "SelectLastIdCapturaPantallaUser": "SELECT Id FROM act_CapturasPantalla WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1 "
+    "SelectLastIdPresUser": "SELECT IdPres FROM act_Prestamos WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1",
+    "SelectLastIdCoutaUser": "SELECT Id FROM act_Cuotas WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1",
+    "SelectLastIdCapturaPantallaUser": "SELECT Id FROM act_CapturasPantalla WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1"
   }
 }
