--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -29,6 +29,7 @@
     "SelectCorreoUser": "SELECT Correo FROM act_User WHERE IdU = @IdUser"
   },
   "Automatic": {
-    "SelectDateCuotasAll": "SELECT a.Id, a.IdUser, a.IdCuot, a.FechaCuota, a.Valor e.NombreYApellido FROM act_Cuotas a JOIN act_User e ON a.IdUser = e.Id WHERE a.Estado = 'PENDIENTE'"
+    "SelectDateCuotasAll": "SELECT a.Id, a.IdPrestamo, a.IdUser, a.IdCuot, a.FechaCuota, a.Valor e.NombreYApellido FROM act_Cuotas a JOIN act_User e ON a.IdUser = e.Id WHERE a.Estado = 'PENDIENTE'",
+    "SelectParticipantesPrestamo": "SELECT a.ParticipantesId FROM act_Eventos WHERE IdEstado = 'CONCURSO'"
   }
 }
