--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -30,6 +30,6 @@
   },
   "Automatic": {
     "SelectDateCuotasAll": "SELECT a.Id, a.IdPrestamo, a.IdUser, a.IdCuot, a.FechaCuota, a.Valor e.NombreYApellido FROM act_Cuotas a JOIN act_User e ON a.IdUser = e.Id WHERE a.Estado = 'PENDIENTE'",
-    "SelectParticipantesPrestamo": "SELECT a.ParticipantesId FROM act_Eventos WHERE IdEstado = 'CONCURSO' AND IdPrestamo = @IdPrestamo"
+    "SelectParticipantesPrestamo": "SELECT a.Id, a.ParticipantesId FROM act_Eventos a WHERE IdEstado = 'CONCURSO' AND IdPrestamo = @IdPrestamo"
   }
 }
