--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -30,6 +30,7 @@
   },
   "Automatic": {
     "SelectDateCuotasAll": "SELECT a.Id, a.IdPrestamo, a.IdUser, a.IdCuot, a.FechaCuota, a.Valor e.NombreYApellido e.TipoUser FROM act_Cuotas a JOIN act_User e ON a.IdUser = e.Id WHERE a.Estado = 'PENDIENTE' OR a.Estado = 'PENDIENTE M1'",
-    "SelectParticipantesPrestamo": "SELECT a.Id, a.ParticipantesId FROM act_Eventos a WHERE IdEstado = 'CONCURSO' AND IdPrestamo = @IdPrestamo"
+    "SelectParticipantesPrestamo": "SELECT a.Id, a.ParticipantesId FROM act_Eventos a WHERE Estado = 'CONCURSO' AND IdPrestamo = @IdPrestamo",
+    "SelectAllDateEventos": "SELECT a.Id, a.FechaFinalizacion FROM act_Eventos a WHERE Estado = 'CONCURSO'"
   }
 }
