--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Administrador\**" />
+    <Content Remove="Views\Administrador\**" />
+    <EmbeddedResource Remove="Views\Administrador\**" />
+    <None Remove="Views\Administrador\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
@@ -25,7 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Administrador\" />
     <Folder Include="wwwroot\css\Administrador\" />
     <Folder Include="wwwroot\js\Administrador\" />
   </ItemGroup>
