Objetivo 4 - Vistas. 1. Moficiaciones en las Vistas y Layout.

--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -39,4 +39,9 @@
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\General\Home\" />
+    <Folder Include="wwwroot\js\General\Home\" />
+  </ItemGroup>
+
 </Project>
