--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\css\General\Home\" />
-    <Folder Include="wwwroot\js\General\Home\" />
+    <Folder Include="wwwroot\css\General\Menu\" />
+    <Folder Include="wwwroot\js\General\Menu\" />
   </ItemGroup>
 
 </Project>
